# polarcam-rewrite

./: .gitignore  README.md  ideas.md  pyproject.toml
offline/: analyze_cycles.py  inspect_captures.py  merge_recording.py  merge_spot_capture.py  polcam_reconstruction.ipynb
reference_files/: TDMS_inspection_v3.ipynb  theta_logic.md
src/polarcam/: __init__.py  __main__.py  app.py  cli.py  hardware.py  ids_backend.py
src/polarcam/analysis/: __init__.py  classify.py  detect.py  pol_reconstruction.py  smap.py  varmap.py
src/polarcam/app/: __init__.py  lut_widget.py  main_window.py  spot_cycler.py  spot_detect.py  spot_recorder.py  spot_viewer.py  varmap_dialog.py
src/polarcam/backend/: __init__.py  base.py  ids_backend.py  mock_backend.py
src/polarcam/capture/: __init__.py  frame_writer.py  varmap_capture.py
src/polarcam/controller/: controller.py
src/polarcam/offline/: spot_from_stack.py
src/polarcam/plugins/: __init__.py  base.py  motion_spots.py
