[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polarcam"
version = "0.0.1"
description = "Minimal scaffold while rewriting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
polarcam = "polarcam.app:main"
