[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polarcam"
version = "0.0.1"
description = "Minimal scaffold while rewriting"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "numpy",
    "PySide6",
    "scikit-image",
    "scipy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
polarcam = "polarcam.app:main"
