[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polarcam"
version = "0.0.1"
description = "Minimal scaffold while rewriting"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "numpy",
    "PySide6",
    "scikit-image",
    "scipy",
    "matplotlib",
]

# Optional, developer-focused tools
[project.optional-dependencies]
dev = ["pyinstaller>=6.0", "black", "ruff", "mypy"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["polarcam*"]

# Ship common UI assets if you add them later (harmless if none exist)
[tool.setuptools.package-data]
"polarcam" = ["**/*.qss", "**/*.ico", "**/*.png"]

# CLI entry point (shows a console on Windows)
[project.scripts]
polarcam = "polarcam.cli:main"

# GUI entry point (no console window on Windows)
[project.entry-points."gui_scripts"]
polarcam-gui = "polarcam.cli:main"
